--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "lint": "node fern.js lint",
     "build": "node fern.js build configs/sandbox.js --environment prod",
     "build-module": "node fern.js build configs/module.js --environment prod",
-    "preinstall": "npx npm-force-resolutions@0.0.10",
     "start-brave-env": "web-ext run --source-dir='./build' --target chromium --chromium-binary \"$BRAVE_BIN\"",
     "start:brave": "web-ext run --source-dir='./build' --target chromium --chromium-binary ./brave/brave",
     "start:build": "node --unhandled-rejections=strict fern.js serve configs/sandbox.js --no-launch",
@@ -44,11 +43,12 @@
     "not Safari >= 0"
   ],
   "homepage": "https://github.com/brave/web-discovery-project#readme",
-  "resolutions": {
+  "overrides": {
     "ansi-html": "mahdyar/ansi-html-community#v0.0.8",
     "node-forge": "1.3.1",
     "moment": "2.29.2",
-    "async": "2.6.4"
+    "async": "2.6.4",
+    "got": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.9",
@@ -90,9 +90,9 @@
     "console-ui": "3.1.2",
     "cookie-parser": "1.4.6",
     "eslint": "7.32.0",
+    "eslint_d": "12.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-compat": "4.0.2",
-    "eslint_d": "12.0.0",
     "express": "4.17.3",
     "fake-indexeddb": "3.1.7",
     "filehound": "1.17.5",
@@ -116,7 +116,7 @@
     "typescript": "4.6.3",
     "untildify": "4.0.0",
     "watch-detector": "1.0.1",
-    "web-ext": "6.8.0",
+    "web-ext": "^7.1.0",
     "webpack": "5.72.0",
     "ws": "8.5.0"
   },
@@ -134,7 +134,9 @@
   "auto": {
     "name": "Brave",
     "email": "remi@brave.com",
-    "plugins": ["git-tag"],
+    "plugins": [
+      "git-tag"
+    ],
     "labels": [
       {
         "name": "PR: Breaking Change :boom:",
