--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
   "overrides": {
     "ansi-html": "0.0.9",
     "node-forge": "1.3.1",
-    "got": "12.1.0"
+    "got": "12.1.0",
+    "glob-parent": "6.0.1"
   },
   "auto": {
     "name": "Brave",
