--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "ansi-html": "0.0.9",
     "node-forge": "1.3.1",
     "got": "12.1.0",
-    "glob-parent": "6.0.2"
+    "glob-parent": "6.0.2",
+    "file-type": "16.5.4"
   },
   "auto": {
     "name": "Brave",
