--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "file-type": "17.1.4",
     "fast-json-patch": "3.1.1",
     "jsonwebtoken": "9.0.0",
+    "xml2js": "0.5.0",
     "cacheable-request": "10.2.7"
   },
   "auto": {
