--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
     "fast-json-patch": "3.1.1",
     "jsonwebtoken": "9.0.0",
     "xml2js": "0.5.0",
-    "cacheable-request": "10.2.7"
+    "cacheable-request": "10.2.7",
+    "socket.io": "4.6.1"
   },
   "auto": {
     "name": "Brave",
