--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
     "console-ui": "3.1.2",
     "cookie-parser": "1.4.6",
     "eslint": "7.32.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-compat": "4.0.2",
     "eslint_d": "13.0.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-compat": "4.2.0",
     "express": "4.18.1",
     "fake-indexeddb": "5.0.1",
     "filehound": "1.17.6",
@@ -104,7 +104,6 @@
     "testem": "3.10.1",
     "tree-sync": "2.1.0",
     "typescript": "5.2.2",
-    "untildify": "4.0.0",
     "watch-detector": "1.0.2",
     "web-ext": "7.8.0",
     "webpack": "5.89.0",
@@ -123,15 +122,6 @@
     "webextension-polyfill": "0.9.0"
   },
   "overrides": {
-    "ansi-html": "0.0.9",
-    "node-forge": "1.3.1",
-    "got": "13.0.0",
-    "glob-parent": "6.0.2",
-    "file-type": "17.1.6",
-    "fast-json-patch": "3.1.1",
-    "jsonwebtoken": "9.0.2",
-    "xml2js": "0.6.2",
-    "cacheable-request": "10.2.7",
-    "socket.io": "4.7.2"
+    "ansi-html": "0.0.9"
   }
 }
