--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "cookie": "0.7.0",
     "body-parser": "1.20.3",
     "express": "4.20.0",
+    "form-data": "4.0.4",
     "send": "0.19.0",
     "tough-cookie": "4.1.3",
     "serialize-javascript": "6.0.2"
