--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "form-data": "4.0.4",
     "send": "0.19.0",
     "tough-cookie": "4.1.3",
-    "serialize-javascript": "6.0.2"
+    "serialize-javascript": "6.0.2",
+    "tmp": "0.2.4"
   }
 }
