--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@babel/plugin-transform-template-literals": "7.23.3",
     "@babel/preset-env": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
+    "@eslint/eslintrc": "3.3.3",
+    "@eslint/js": "9.39.2",
     "@types/chrome": "0.0.251",
     "@types/mocha": "10.0.4",
     "@types/node": "20.9.0",
@@ -82,7 +84,7 @@
     "concurrently": "8.2.2",
     "console-ui": "3.1.2",
     "cookie-parser": "1.4.6",
-    "eslint": "8.0.0",
+    "eslint": "9.39.2",
     "eslint_d": "13.1.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.2.0",
@@ -93,6 +95,7 @@
     "git-describe": "4.1.1",
     "git-rev": "0.2.1",
     "glob": "8.1.0",
+    "globals": "17.2.0",
     "jsdom": "22.1.0",
     "mocha": "10.2.0",
     "mockdate": "3.0.5",
@@ -130,6 +133,7 @@
     "ansi-html": "0.0.9",
     "cookie": "0.7.0",
     "body-parser": "1.20.3",
+    "eslint": "9.39.2",
     "express": "4.21.2",
     "form-data": "4.0.4",
     "js-yaml": "4.1.1",
